--- a/zoom/hud/hud.css
+++ b/zoom/hud/hud.css
@@ -7,6 +7,7 @@
   font-size: 12px;
   font-family: 'Press Start 2P', cursive, monospace;
   color: #fff;
+  text-align: center;
   background: rgba(0,0,0,0.5);
   z-index: 1002;
   user-select: none;
@@ -15,3 +16,4 @@
   width: 100%;
   box-sizing: border-box;
 }
+
