--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,6 +1,16 @@
 /* responsive/responsive.css */
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+.template-notice {
+  margin-top:10px;
+  position: absolute;
+  font-size: 16px;
+  top: 720px;
+  left: 8px;
+  text-align: left;
+
+}
+
 .message-container {
   position: absolute;
   margin-top: 10px;
@@ -18,7 +28,7 @@
   margin-top: 10px;
   font-size: 16px;
   max-width: 800px;
-  top: 720px;
+  top: 740px;
   left: 8px;
   z-index: 1;
 }
@@ -42,4 +52,9 @@ a:hover {
     font-size: 14px;
     top: 360px;
   }
+ .template-notice {
+   font-size: 14px;
+   top: 420px;
+
+ }
 }
