--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,6 +1,20 @@
 /* responsive/responsive.css */
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
+img {
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+  display: block;
+  width: 100%;
+  max-width: 750px;
+  height: auto;
+  cursor: zoom-in;
+  transition: none;
+  position: relative;
+  z-index: 1001;
+  user-select: none;
+  touch-action: none;
+  left: 20px;
+}
 
 .message-container {
   position: absolute;
@@ -47,15 +61,19 @@ a:hover {
   .message-container {
     max-width: 140px;
     font-size: 14px;
-    top: 150px;
-  }
-  .link-container {
-    font-size: 14px;
-    top: 420px;
+    top: 350px;
   }
  .template-notice {
    font-size: 14px;
-   top: 360px;
+   top: 620px;
 
  }
+  .link-container {
+    font-size: 14px;
+    top: 640px;
+  }
+
+img{
+  max-width: 520px;
+}
 }
